[package]
name = "stdmath"
version = "0.1.0"
authors = ["Miraclx <omiraculous@gmail.com>"]
edition = "2018"

[dependencies]
dyn-clone = "1.0.2"
num = {version = "0.3.0", optional = true}
rayon = {version = "1.4.0", optional = true}

[features]
cache = []
order = []
concurrency = ["rayon"]
num_traits = ["num"]
